--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E.T.F: 404 Error.</title>
+    <title>Nosniy Games Anuncia el borrado de Arena. - ¿Evento del Dia? - Noticias sobre Rivals</title>
+    <meta name="description" content="Noticias de ultima hora. Nosniy Games anuncia de que Arena sera eliminada. ¿El evento del dia es dificil de ganar? Pues con EspRiv podras saberlo todo. El canal de noticia Hispanohablantes mas grande de Rivals">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>404 - Page Not Found :(</h1>
-        <p>Oops! The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-        <div class="search-bar">
-            <input type="text" placeholder="Type here . . ." />
-        </div>
-        <p>
-            <a href="https://discord.gg/6AMn6b4WpK">Visit our homepage</a> | 
-            <a href="https://discord.gg/6AMn6b4WpK">Check out our latest articles</a> | 
-            <a href="https://discord.gg/6AMn6b4WpK">Browse our FAQs</a>
-        </p> <!-- all links changeable -->
+        <h1>404 - Pagina no encontrada</h1>
+        <p>Creo que te has perdido. Dale al boton de abajo para volver al canal de noticias</p>
+        <button id="indez">Volver a Noticias.</button>
     </div>
     <script defer src="script.js"></script>
     <footer>
-        © 2025 Grizzly Team's Computing. All rights reserved. <br>
-        Contact us: <a href="https://discord.gg/6AMn6b4WpK/">support@grizzlyteam.com</a> <!-- all changeable-->
+        © 2026 EspRiv. Todos los derechos reservados. <br>
     </footer>
 </body>
 </html>
